Add submodules, utility scripts, environment setup and README.md
This includes MIP_results_comparison and PowerGenome as submodules,
utility scripts for comparing Switch or GenX input directories,
a utility script to download PowerGenome input data, an
environment.yml and a README.md explaining how to use all these.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "MIP_results_comparison"]
 	path = MIP_results_comparison
-	url = https://github.com/gschivley/MIP_results_comparison.git
+	url = ./MIP_results_comparison
 [submodule "PowerGenome"]
 	path = PowerGenome
 	url = https://github.com/PowerGenome/PowerGenome.git
