--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "MIP_results_comparison"]
 	path = MIP_results_comparison
-	url = ./MIP_results_comparison
+	url = https://github.com/gschivley/MIP_results_comparison.git
+	shallow = true
 [submodule "PowerGenome"]
 	path = PowerGenome
 	url = https://github.com/PowerGenome/PowerGenome.git
+	shallow = true
