Create PowerGenome/powergenome/.env and case_settings/**/env.yml in download_pg_data.py

--- a/environment.yml
+++ b/environment.yml
@@ -4,4 +4,5 @@ dependencies:
   - conda-forge::switch_model=2.0.7
   - conda-forge::gdown
   - conda-forge::seaborn
+  - conda-forge::pyyaml
   - gurobi::gurobi
