--- a/pg_data.yml
+++ b/pg_data.yml
@@ -14,20 +14,26 @@
 download_folders:
   pg_data/PowerGenome Data Files/PUDL Data: https://drive.google.com/drive/folders/1z9BdvbwgpS5QjPTrcgyFZJUb-eN2vebu
   pg_data/PowerGenome Data Files/PowerGenome Resource Groups/generation_profiles: https://drive.google.com/drive/folders/1ZYxnl4U_3HXlYPxm8qlmqyWB8NyC3PpG
+  pg_data/conus-26 resource groups: https://drive.google.com/drive/folders/1QUtctoFDgSqrTZ2NYnM7i_EBBQthuRhg
 
 # note: .zip files will be replaced by their expanded version
 download_files:
-  pg_data/corrected-20z-resource-groups.zip: https://drive.google.com/file/d/1MXkdRW-YQ-hq3KzK_TbzTfD1-0CRZmdR/view?usp=drive_link
-  pg_data/PowerGenome Data Files/pg_misc_tables_efs.sqlite.zip: https://drive.google.com/file/d/1XrLOqVGNP1qjvsXeTt1YH2Pyppqad0fc/view?usp=drive_link
+  # pg_data/corrected-20z-resource-groups.zip: https://drive.google.com/file/d/1MXkdRW-YQ-hq3KzK_TbzTfD1-0CRZmdR/view?usp=drive_link
+  # pg_data/PowerGenome Data Files/pg_misc_tables_efs.sqlite.zip: https://drive.google.com/file/d/1XrLOqVGNP1qjvsXeTt1YH2Pyppqad0fc/view?usp=drive_link
+  pg_data/PowerGenome Data Files/pg_misc_tables_efs_2023.2.sqlite.zip: https://drive.google.com/file/d/1eznTvIoOPj_o4D_dSIgJDnRkXzENiboB/view?usp=share_link
   pg_data/PowerGenome Data Files/efs_files_utc.zip: https://drive.google.com/file/d/1dWA35bQpPksnSb6auybMbrIqyaBG6wBM/view?usp=drive_link
   pg_data/PowerGenome Data Files/cambium_dg_data.zip: https://drive.google.com/file/d/1nbhWwOsNeOtcUew9Mn4QGuAtCsZo0VZ2/view?usp=drive_link
 
 env:
   PUDL_DB: pg_data/PowerGenome Data Files/PUDL Data/pudl.sqlite
-  PG_DB: pg_data/PowerGenome Data Files/pg_misc_tables_efs.sqlite
+  # PG_DB: pg_data/PowerGenome Data Files/pg_misc_tables_efs.sqlite
+  PG_DB: pg_data/PowerGenome Data Files/pg_misc_tables_efs_2023.2.sqlite
   RESOURCE_GROUP_PROFILES: pg_data/PowerGenome Data Files/PowerGenome Resource Groups/generation_profiles
   EFS_DATA: pg_data/PowerGenome Data Files/efs_files_utc
-  DISTRIBUTED_GEN_DATA: pg_data/PowerGenome Data Files
+  DISTRIBUTED_GEN_DATA: pg_data/PowerGenome Data Files/cambium_dg_data
 
 resource_groups:
-  26-zone: pg_data/corrected-20z-resource-groups
+  # 26-zone/settings: pg_data/corrected-20z-resource-groups
+  # 26-zone/settings-atb2023: pg_data/corrected-20z-resource-groups
+  26-zone/settings: pg_data/conus-26 resource groups
+  26-zone/settings-atb2023: pg_data/conus-26 resource groups
